--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,64 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+
+body{
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+}
+p{
+    margin: 0;
+}
+ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+a, a:hover{
+    text-decoration: none;
+    color: black;
+}
+h1{
+    font-weight: 700;
+}
+
+
+/* COMMON */
+.p-cursor{
+    cursor: pointer;
+}
+.p-flex{
+    display: flex;
+}
+.p-flex-align-center{
+    align-items: center;
+}
+.p-flex-justify-sb{
+    justify-content: space-between;
+}
+.p-readmore{
+    color: black;
+    font-size: 15px;
+    font-weight: 600;
+}
+.p-readmore img{
+    transition: all .5s;
+    transform: translateX(0);
+}
+.p-readmore:hover img{
+    transform: translateX(5px);
+}
+
+/* WRAPPER CLASS */
+.p-wrapper{
+    position: relative;
+}
+.p-wrapper::before{
+    content: '';
+    background: white;
+    height: 100vh;
+    width: 25vw;
+    position: absolute;
+    z-index: -1;
+    
+}
